[package]
authors = ["Pendulum"]
build = "build.rs"
description = "Foucoco runtime"
edition = "2021"
homepage = "https://pendulumchain.org"
name = "foucoco-runtime"
repository = "https://github.com/pendulum-chain/pendulum"
version = "1.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0" }

[dependencies]
codec = { workspace = true, features = ["derive"] }
hex-literal = { workspace = true, optional = true }
log = { workspace = true }
paste = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive"] }
smallvec = { workspace = true }
cfg-if = { workspace = true }


# Local
runtime-common = { path = "../common", default-features = false }
token-chain-extension = { path = "../../chain-extensions/token", default-features = false }
price-chain-extension = { path = "../../chain-extensions/price", default-features = false }

# custom libraries from spacewalk
clients-info = { workspace = true }
currency = { workspace = true }
security = { workspace = true }
staking = { workspace = true }
oracle = { workspace = true }
stellar-relay = { workspace = true }
fee = { workspace = true }
vault-registry = { workspace = true }
redeem = { workspace = true }
issue = { workspace = true }
nomination = { workspace = true }
replace = { workspace = true }
spacewalk-primitives = { workspace = true }
pooled-rewards = { workspace = true }
reward-distribution = { workspace = true }

module-issue-rpc-runtime-api = { workspace = true }
module-oracle-rpc-runtime-api = { workspace = true }
module-redeem-rpc-runtime-api = { workspace = true }
module-replace-rpc-runtime-api = { workspace = true }
module-vault-registry-rpc-runtime-api = { workspace = true }
module-pallet-staking-rpc-runtime-api = { path = "../../pallets/parachain-staking/rpc/runtime-api", default-features = false }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
pallet-aura = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-bounties = { workspace = true }
pallet-child-bounties = { workspace = true }
pallet-collective = { workspace = true }
pallet-contracts = { workspace = true }
pallet-democracy = { workspace = true }
pallet-identity = { workspace = true }
pallet-message-queue = { workspace = true }
pallet-multisig = { workspace = true }
pallet-preimage = { workspace = true }
pallet-proxy = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-session = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-treasury = { workspace = true }
pallet-utility = { workspace = true }
pallet-vesting = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-storage = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

# Open Runtime Module Library
orml-asset-registry = { workspace = true }
orml-currencies = { workspace = true }
orml-traits = { workspace = true }
orml-tokens = { workspace = true }
orml-xcm-support = { workspace = true }
orml-xtokens = { workspace = true }

# KILT
parachain-staking = { path = "../../pallets/parachain-staking", default-features = false }

orml-currencies-allowance-extension = { path = "../../pallets/orml-currencies-allowance-extension", default-features = false }
orml-tokens-management-extension = { path = "../../pallets/orml-tokens-management-extension", default-features = false }
treasury-buyout-extension = { path = "../../pallets/treasury-buyout-extension", default-features = false }

# DIA
dia-oracle = { workspace = true }
dia-oracle-runtime-api = { workspace = true }

# Polkadot
pallet-xcm = { workspace = true }
polkadot-parachain = { workspace = true }
polkadot-runtime-common = { workspace = true }
xcm = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }

# Cumulus
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-session-benchmarking = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
cumulus-primitives-utility = { workspace = true }
parachain-info = { workspace = true }
parachains-common = {  workspace = true }


zenlink-protocol = { workspace = true }
zenlink-protocol-runtime-api = { workspace = true }

bifrost-farming = { workspace = true }
bifrost-farming-rpc-runtime-api = { workspace = true }

[features]
default = [
    "std",
]
std = [
    "codec/std",
    "log/std",
    "scale-info/std",
    "serde",
    "cumulus-pallet-aura-ext/std",
    "cumulus-pallet-dmp-queue/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-parachain-system/parameterized-consensus-hook",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-timestamp/std",
    "cumulus-primitives-utility/std",
    "dia-oracle/std",
    'dia-oracle-runtime-api/std',
    "frame-executive/std",
    "frame-metadata-hash-extension/std",
    "frame-support/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime/std",
    "orml-asset-registry/std",
    "orml-currencies/std",
    "orml-traits/std",
    "orml-tokens/std",
    "orml-xtokens/std",
    "orml-xcm-support/std",
    "pallet-aura/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-bounties/std",
    "pallet-child-bounties/std",
    "pallet-collective/std",
    "pallet-contracts/std",
    "pallet-democracy/std",
    "pallet-identity/std",
    "pallet-message-queue/std",
    "pallet-multisig/std",
    "pallet-preimage/std",
    "pallet-proxy/std",
    "pallet-insecure-randomness-collective-flip/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-treasury/std",
    "pallet-utility/std",
    "pallet-vesting/std",
    "pallet-xcm/std",
    "parachain-info/std",
    "parachains-common/std",
    "parachain-staking/std",
    "orml-currencies-allowance-extension/std",
    "orml-tokens-management-extension/std",
    "pooled-rewards/std",
    "polkadot-runtime-common/std",
    "runtime-common/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-genesis-builder/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "staging-xcm-builder/std",
    "staging-xcm-executor/std",
    "xcm/std",
    "zenlink-protocol/std",
    "zenlink-protocol-runtime-api/std",
    #custom libraries from spacewalk
    "currency/std",
    "security/std",
    "staking/std",
    "oracle/std",
    "stellar-relay/std",
    "fee/std",
    "vault-registry/std",
    "redeem/std",
    "issue/std",
    "nomination/std",
    "replace/std",
    "module-issue-rpc-runtime-api/std",
    "module-oracle-rpc-runtime-api/std",
    "module-redeem-rpc-runtime-api/std",
    "module-replace-rpc-runtime-api/std",
    "module-vault-registry-rpc-runtime-api/std",
    "module-pallet-staking-rpc-runtime-api/std",
    "spacewalk-primitives/std",
    "treasury-buyout-extension/std",
    "bifrost-farming/std",
    "bifrost-farming-rpc-runtime-api/std",
    "price-chain-extension/std",
    "token-chain-extension/std",
]

runtime-benchmarks = [
    "hex-literal",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "staging-xcm-builder/runtime-benchmarks",
    "cumulus-pallet-session-benchmarking/runtime-benchmarks",
    "cumulus-pallet-xcmp-queue/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "parachains-common/runtime-benchmarks",
    "pallet-message-queue/runtime-benchmarks",
    "currency/runtime-benchmarks",
    "fee/runtime-benchmarks",
    "issue/runtime-benchmarks",
    "nomination/runtime-benchmarks",
    "oracle/runtime-benchmarks",
    "redeem/runtime-benchmarks",
    "replace/runtime-benchmarks",
    "stellar-relay/runtime-benchmarks",
    "vault-registry/runtime-benchmarks",
    "oracle/testing-utils",
    "runtime-common/runtime-benchmarks",
    "orml-currencies-allowance-extension/runtime-benchmarks",
    "parachain-staking/runtime-benchmarks",
    "orml-tokens-management-extension/runtime-benchmarks",
    "treasury-buyout-extension/runtime-benchmarks",
    "dia-oracle/runtime-benchmarks",
    "dia-oracle-runtime-api/runtime-benchmarks"
]

try-runtime = [
    "frame-executive/try-runtime",
    "frame-try-runtime",
    "frame-system/try-runtime",
    "parachain-info/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-bounties/try-runtime",
    "pallet-child-bounties/try-runtime",
    "pallet-collective/try-runtime",
    "pallet-contracts/try-runtime",
    "pallet-identity/try-runtime",
    "pallet-democracy/try-runtime",
    "pallet-message-queue/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-preimage/try-runtime",
    "pallet-insecure-randomness-collective-flip/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-session/try-runtime",
    "pallet-proxy/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-treasury/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-vesting/try-runtime",
    "pallet-xcm/try-runtime",
    "parachain-staking/try-runtime",
    "cumulus-pallet-aura-ext/try-runtime",
    "cumulus-pallet-dmp-queue/try-runtime",
    "cumulus-pallet-parachain-system/try-runtime",
    "cumulus-pallet-xcm/try-runtime",
    "cumulus-pallet-xcmp-queue/try-runtime",
    "orml-asset-registry/try-runtime",
    "orml-currencies/try-runtime",
    "orml-tokens/try-runtime",
    "orml-xtokens/try-runtime",
    "stellar-relay/try-runtime",
    "issue/try-runtime",
    "currency/try-runtime",
    "security/try-runtime",
    "staking/try-runtime",
    "oracle/try-runtime",
    "fee/try-runtime",
    "vault-registry/try-runtime",
    "redeem/try-runtime",
    "nomination/try-runtime",
    "replace/try-runtime",
    "pooled-rewards/try-runtime",
    "clients-info/try-runtime",
    "reward-distribution/try-runtime",
    "dia-oracle/try-runtime",
    "orml-currencies-allowance-extension/try-runtime",
    "orml-tokens-management-extension/try-runtime",
    "treasury-buyout-extension/try-runtime",
    "bifrost-farming/try-runtime",
    "zenlink-protocol/try-runtime",
]

metadata-hash = ["substrate-wasm-builder/metadata-hash"]
