[package]
name = "runtime-integration-tests"
description = "Pendulum runtime integration tests"
authors = ["Pendulum"]
edition = "2021"
version = "1.6.0-c"

[dev-dependencies]
codec = { workspace = true, default-features = true }
scale-info = { workspace = true, default-features = true, features = ["derive"] }
serde = { workspace = true, default-features = true, features = ["derive"] }
paste = { workspace = true }

# Spacewalk libraries
spacewalk-primitives = { workspace = true, default-features = true }

frame-system = { workspace = true, default-features = true }
frame-support = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-assets = { workspace = true, default-features = true } # for events
sp-std = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }

xcm = { workspace = true, default-features = true }
xcm-executor = { workspace = true, default-features = true }
xcm-builder = { workspace = true, default-features = true }
pallet-xcm = { workspace = true, default-features = true }
polkadot-core-primitives = { workspace = true, default-features = true }
polkadot-runtime-parachains = { workspace = true, default-features = true }
polkadot-parachain = { workspace = true, default-features = true }
polkadot-primitives = { workspace = true, default-features = true }
polkadot-runtime-common = { workspace = true, default-features = true }

xcm-emulator = { workspace = true, default-features = true }
xcm-simulator = { workspace = true, default-features = true }
integration-tests-common = { workspace = true, default-features = true }
#emulated-integration-tests-common = { workspace = true, default-features = true }

pallet-aura = { workspace = true, default-features = true }
pallet-authorship = { workspace = true, default-features = true }
pallet-session = { workspace = true, default-features = true }
pallet-staking = { workspace = true, default-features = true }
cumulus-pallet-aura-ext = { workspace = true, default-features = true }
cumulus-pallet-dmp-queue = { workspace = true, default-features = true }
cumulus-pallet-xcmp-queue = { workspace = true, default-features = true }
cumulus-pallet-xcm = { workspace = true, default-features = true }
cumulus-primitives-core = { workspace = true, default-features = true }
cumulus-primitives-utility = { workspace = true, default-features = true }
cumulus-pallet-parachain-system = { workspace = true, default-features = true }
parachain-info = { workspace = true, default-features = true }
pallet-message-queue = { workspace = true, default-features = true }
parachain-staking = { path = "../../pallets/parachain-staking" }
pallet-timestamp = { workspace = true, default-features = true }


asset-hub-kusama-runtime = { workspace = true, default-features = true }
asset-hub-polkadot-runtime= { workspace = true, default-features = true }
kusama-runtime = {workspace = true, default-features = true}
polkadot-runtime = { workspace = true, default-features = true }
polkadot-runtime-constants = { workspace = true, default-features = true }

orml-asset-registry = { workspace = true, default-features = true }
orml-xcm = { workspace = true, default-features = true }
orml-xcm-support = { workspace = true, default-features = true }
orml-traits = { workspace = true, default-features = true }
orml-tokens = { workspace = true, default-features = true }
orml-xtokens = { workspace = true, default-features = true }

pallet-treasury = { workspace = true, default-features = true }

# Local
runtime-common = { path = "../common", default-features = false }

pendulum-runtime = { path = "../pendulum" }
amplitude-runtime = { path = "../amplitude" }

[features]
default = ["std"]
std = [
    "codec/std",
    "xcm-builder/std"
]

try-runtime = [
    "kusama-runtime/try-runtime",
    "polkadot-runtime-parachains/try-runtime",
    "amplitude-runtime/try-runtime",
    "pendulum-runtime/try-runtime",
]

runtime-benchmarks = [
    "kusama-runtime/runtime-benchmarks",
    "polkadot-parachain/runtime-benchmarks",
    "integration-tests-common/runtime-benchmarks",
    "amplitude-runtime/runtime-benchmarks",
    "pendulum-runtime/runtime-benchmarks",
]
